# touch-grass-cli

./: .env  README.md  pyproject.toml
data/: .gitignore  activities.json.dvc
src/touch_grass_cli/: __init__.py  ai.py  cli.py  data_loader.py  generate_activities.py  planner.py  recommender.py  test_activities.py
src/touch_grass_cli/data/: activities.json
tests/: README.md  test_activities_sample.py  test_cli_scenarios.py  test_data_loader.py
