[project]
name = "touch-grass-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "norahkerendian", email = "norahkerendian@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9,<0.10",
    "wcwidth>=0.2.0",
]

[project.scripts]
touch-grass = "touch_grass_cli.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
